spade-tests/src/snapshots/spade_tests__domain_inference__registers_need_a_clock.snap
---
source: spade-tests/src/domain_inference.rs
---
entity test(clk: clock, a: 'async bool) {
    reg(clk) x = a;
}


error: A value in the 'async domain cannot be stored in a register.
  ┌─ testinput:2:18
  │
2 │     reg(clk) x = a;
  │                  ^ 'async in a register
  │
  = help: Values stored in registers must have a clock
