spade-tests/src/snapshots/spade_tests__domain_inference__return_type_domains_cannot_mismatch.snap
---
source: spade-tests/src/domain_inference.rs
---
fn test<'a, 'b>(a: 'a bool)  -> 'b bool {
    a
}


error: Domain mismatch, expected 'b, but it is in 'a
  ┌─ testinput:2:5
  │
1 │ fn test<'a, 'b>(a: 'a bool)  -> 'b bool {
  │                                 ------- 'b was specified here
2 │     a
  │     ^ Expected domain 'b, found 'a
