spade-tests/src/snapshots/spade_tests__domain_inference__set_statements_enforce_domains.snap
---
source: spade-tests/src/domain_inference.rs
---
entity test<'a, 'b>(a: 'a &bool, b: 'b inv &bool) {
    set b = a;
}


error: Mixing signals in different domains
  ┌─ testinput:2:9
  │
2 │     set b = a;
  │         ^   - This has domain 'a
  │         │    
  │         This has domain 'b
