spade-tests/src/snapshots/spade_tests__domain_inference__stage_ready_is_in_the_pipeline_domain.snap
---
source: spade-tests/src/domain_inference.rs
---
pipeline(1) test<'a, 'b>(clk: 'a clock, other: 'b bool) -> 'b bool {
    reg;
    stage.ready && other
}


error: Mixing signals in different domains
  ┌─ testinput:3:20
  │
3 │     stage.ready && other
  │     -----------    ^^^^^ This has domain 'b
  │     │               
  │     This has domain 'a
