spade-tests/src/snapshots/spade_tests__domain_inference__tlif_true_branch_checks_domains.snap
---
source: spade-tests/src/domain_inference.rs
---
entity test<'a, 'b>(a: 'a bool) -> 'b bool {
    gen if 1==1 {
        a
    } else {
        true
    }
}


error: Mixing signals in different domains
  ┌─ testinput:2:17
  │  
1 │   entity test<'a, 'b>(a: 'a bool) -> 'b bool {
  │                                         ---- This has domain 'b
2 │       gen if 1==1 {
  │ ╭─────────────────^
3 │ │         a
4 │ │     } else {
  │ ╰─────^ This has domain 'a
