spade-tests/src/snapshots/spade_tests__domain_inference__tuple_index_expression_mixing_domains.snap
---
source: spade-tests/src/domain_inference.rs
---
entity test<'a, 'b>(a: 'a (bool, bool)) -> 'b bool {
    a#0
}

error: Mixing signals in different domains
  ┌─ testinput:1:52
  │  
1 │   entity test<'a, 'b>(a: 'a (bool, bool)) -> 'b bool {
  │                                                 ---- This has domain 'b
  │ ╭────────────────────────────────────────────────────^
2 │ │     a#0
3 │ │ }
  │ ╰─^ This has domain 'a
